--- a/themes/docsy/i18n/en.toml
+++ b/themes/docsy/i18n/en.toml
@@ -20,10 +20,10 @@ other = "in"
 
 # Footer text
 [footer_all_rights_reserved]
-other = "All Rights Reserved"
+other = "版权所有"
 
 [footer_privacy_policy]
-other = "Privacy Policy"
+other = "隐私政策"
 
 
 # Post (blog, articles etc.)
